WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23347
Compilation of JavaScriptCore/wtf/ThreadingPthreads.cpp fails
https://bugs.webkit.org/show_bug.cgi?id=23347
Summary
Compilation of JavaScriptCore/wtf/ThreadingPthreads.cpp fails
Craig Schlenter
Reported
2009-01-15 05:54:36 PST
When I try to compile
r39933
on linux, the compilation of JavaScriptCore/wtf/ThreadingPthreads.cpp fails because INT_MAX is not defined. Including limits.h fixes this. I'll attach a patch. I have not tested this on other platforms.
Attachments
patch to fix compiler error
(896 bytes, patch)
2009-01-15 05:56 PST
,
Craig Schlenter
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Craig Schlenter
Comment 1
2009-01-15 05:56:19 PST
Created
attachment 26752
[details]
patch to fix compiler error
Darin Adler
Comment 2
2009-01-15 08:19:54 PST
Comment on
attachment 26752
[details]
patch to fix compiler error r=me
Darin Adler
Comment 3
2009-01-15 10:29:28 PST
***
Bug 23350
has been marked as a duplicate of this bug. ***
Darin Adler
Comment 4
2009-01-15 13:05:51 PST
***
Bug 23353
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 5
2009-01-15 13:32:41 PST
Committed as <
http://trac.webkit.org/changeset/39945
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug