2009-01-15  Craig Schlenter  <craig.schlenter@gmail.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=23347
        Compilation of JavaScriptCore/wtf/ThreadingPthreads.cpp fails on Linux

        * wtf/ThreadingPthreads.cpp: included limits.h as INT_MAX is defined there.



Canonical link: https://commits.webkit.org/32141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39945 268f45cc-cd09-0410-ab3c-d52691b4dbfc